--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>Content Placeholder</title>
 </head>
+
 <body>
-    <h1>Project Starter</h1>
+    <div class="card">
+        <div class="card-header animated-bg" id="header">
+            <img src="https://source.unsplash.com/random" alt="Random Image">
+        </div>
+        <div class="card-content">
+            <h3 class="card-title animated-bg animated-bg-text" id="title">Lorem ipsum dolor sit amet.</h3>
+            <p class="card-excerpt" id="excerpt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, at?
+                <span class="animated-bg animated-bg-text">&nbsp;</span>
+                <span class="animated-bg animated-bg-text">&nbsp;</span>
+                <span class="animated-bg animated-bg-text">&nbsp;</span>
+            </p>
+            <div class="author">
+                <div class="profile-img animated-bg" id="profile_img">
+                    <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Old man">
+                </div>
+                <div class="author-info">
+                    <strong class="animated-bg animated-bg-text" id="name">John Doe</strong>
+                    <small class="animated-bg animated-bg-text" id="date">Oct 08, 2020</small>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
